--- a/MauiSpeechToTextSample/MauiSpeechToTextSample.csproj
+++ b/MauiSpeechToTextSample/MauiSpeechToTextSample.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="System.Speech" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
